IJPL-240707 refresh content roots nested under excluded directories
RefreshWorker now scans newly created directories when the created path or one of its descendants is registered in the workspace model, even if the parent itself is not in a recursive indexable file set. When the scan reaches an excluded directory with nested content roots, it attaches only the registered content-root subtree and skips unrelated excluded content.

Add platform coverage for Local History refresh and nested content roots under excluded directories. Existing directory-creation tests now inspect VFS contents before later VFS listeners can load additional files.

GitOrigin-RevId: e270d6e40eac4747b8c5e21febaa524bb472ebda