@@ -37,16 +37,23 @@ import com.intellij.openapi.vfs.newvfs.persistent.BatchingFileSystem;
 import com.intellij.openapi.vfs.newvfs.persistent.FSRecordsImpl;
 import com.intellij.openapi.vfs.newvfs.persistent.PersistentFS;
 import com.intellij.openapi.vfs.newvfs.persistent.PersistentFSImpl;
+import com.intellij.platform.backend.workspace.WorkspaceModel;
+import com.intellij.platform.workspace.storage.impl.url.VirtualFileUrlManagerImpl;
 import com.intellij.util.MathUtil;
 import com.intellij.util.SmartList;
 import com.intellij.util.TimeoutUtil;
+import com.intellij.util.ThreeState;
 import com.intellij.util.concurrency.AppScheduledExecutorService;
 import com.intellij.util.concurrency.Semaphore;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.containers.Stack;
+import com.intellij.util.containers.TreeNodeProcessingResult;
+import com.intellij.util.io.URLUtil;
 import com.intellij.workspaceModel.core.fileIndex.WorkspaceFileIndex;
 import com.intellij.workspaceModel.core.fileIndex.WorkspaceFileSet;
 import com.intellij.workspaceModel.core.fileIndex.WorkspaceFileSetWithCustomData;
+import com.intellij.workspaceModel.core.fileIndex.impl.WorkspaceFileIndexEx;
+import com.intellij.workspaceModel.ide.VirtualFileUrlManagerUtil;
 import it.unimi.dsi.fastutil.objects.ObjectOpenCustomHashSet;
 import kotlinx.coroutines.Dispatchers;
 import kotlinx.coroutines.ExecutorsKt;
@@ -59,6 +66,7 @@ import java.nio.file.FileVisitResult;
 import java.nio.file.FileVisitor;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
+import java.nio.file.LinkOption;
 import java.nio.file.Path;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
@@ -66,6 +74,8 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -603,7 +613,7 @@ final class RefreshWorker {
       LOG.trace("create parent=" + parent + " name=" + childName + " attr=" + attributes);
     }
 
-    ChildInfo[] children = null;
+    ScannedChildren scannedChildren = null;
     if (attributes.isDirectory() && !attributes.isSymLink() && parent.getFileSystem() instanceof LocalFileSystem) {
       try {
         var childPath = getChildPath(parent.getPath(), childName);
@@ -613,7 +623,7 @@ final class RefreshWorker {
             return path.startsWith(childPath) ? path : null;
           });
           var t = System.nanoTime();
-          children = scanChildren(childPath, relevantExcluded, parent);
+          scannedChildren = scanChildren(childPath, relevantExcluded, parent);
           ioTime.addAndGet(System.nanoTime() - t);
         }
       }
@@ -622,7 +632,9 @@ final class RefreshWorker {
       }
     }
 
-    events.add(new VFileCreateEvent(REQUESTOR, parent, childName, attributes.isDirectory(), attributes, symlinkTarget, children));
+    ChildInfo[] children = scannedChildren == null ? null : scannedChildren.children();
+    boolean childrenComplete = scannedChildren != null && scannedChildren.childrenComplete();
+    events.add(new VFileCreateEvent(REQUESTOR, parent, childName, attributes.isDirectory(), attributes, symlinkTarget, children, childrenComplete));
 
     VFileEvent caseSensitivityChangingEvent = ((PersistentFSImpl)persistentFS).determineCaseSensitivityAndPrepareUpdate(parent, childName);
     if (caseSensitivityChangingEvent != null) {
@@ -651,17 +663,71 @@ final class RefreshWorker {
         return true;
       }
     }
-    return false;
+    return isInContent(child) || !contentRootsUnderExcluded(child).isEmpty();
   }
 
-  // scan all children of "root" (except excluded dirs) recursively and return them in the ChildInfo[] array
+  private static boolean isInContent(Path directoryOrFile) {
+    String url = toUrl(directoryOrFile);
+    var openProjects = ProjectManager.getInstance().getOpenProjects();
+    return ContainerUtil.exists(openProjects, project -> ReadAction.computeBlocking(
+      () -> WorkspaceFileIndexEx.getInstance(project).isUrlIndexable(url, false) == ThreeState.YES));
+  }
+
+  private static List<Path> contentRootsUnderExcluded(Path directory) {
+    var roots = new LinkedHashSet<Path>();
+    String url = toUrl(directory);
+    for (Project openProject : ProjectManager.getInstance().getOpenProjects()) {
+      ReadAction.runBlocking(() -> {
+        var workspaceFileIndex = WorkspaceFileIndexEx.getInstance(openProject);
+        var vfuManager = (VirtualFileUrlManagerImpl)WorkspaceModel.getInstance(openProject).getVirtualFileUrlManager();
+        var vfu = vfuManager.findByUrl(url);
+        if (vfu == null) return;
+        vfuManager.processChildrenRecursively(vfu, child -> {
+          if (workspaceFileIndex.isUrlIndexable(child.getUrl(), false) == ThreeState.YES) {
+            roots.add(VirtualFileUrlManagerUtil.toPath(child));
+            return TreeNodeProcessingResult.SKIP_CHILDREN;
+          }
+          return TreeNodeProcessingResult.CONTINUE;
+        });
+      });
+    }
+    return ContainerUtil.filter(roots, root -> Files.exists(root));
+  }
+
+  private static @NotNull String toUrl(Path directory) {
+    return URLUtil.FILE_PROTOCOL + URLUtil.SCHEME_SEPARATOR + FileUtilRt.toSystemIndependentName(directory.toString());
+  }
+
+  private record ScannedChildren(ChildInfo @NotNull [] children, boolean childrenComplete) {
+  }
+
+  // scan all children of "root" (except excluded dirs) recursively and return them in a ScannedChildren record
   // `null` means error during scan
-  private ChildInfo @Nullable [] scanChildren(Path root, List<Path> excluded, NewVirtualFile currentDir) {
+  private @Nullable ScannedChildren scanChildren(Path root, List<Path> excluded, NewVirtualFile currentDir) {
     // the stack contains a list of children found so far in the current directory
     Stack<List<ChildInfo>> stack = new Stack<>();
     int nameId = vfsPeer.getNameId("");
     ChildInfo fakeRoot = new ChildInfoImpl(nameId, null, null, null, false);
     stack.push(new SmartList<>(fakeRoot));
+    /*
+    1. (if file) `visitFile`: on top of the stack lays a list of children of the parent directory.
+    Add fileInfo of the current file to the list. Skip steps 2-4
+
+    1. (if directory) `preVisitDirectory`
+      calls `visitFile` (same as for a file)
+      a) (if not excluded) push an empty list on the stack if the directory
+      b) (if excluded) skip steps 2-4
+      c) (if excluded but has included files underneath) collect info about those includes.
+      Add this info into the last childInfo in the list on top of the stack (this child info is placed in `visitFile`)
+
+    2. `visitFile`: append a fileInfo to the list on top of the stack
+    3. (if directory) visit children, perform steps 1-4 on each of them
+
+    4. (if directory) `postVisitDirectory`
+    At this point on top of the stack is a list of children of the current directory.
+    Underneath is a list of children of the parent directory. At the end of this list is our directory info from step 2 without children.
+    Add children to this info
+     */
     FileVisitor<Path> visitor = new SimpleFileVisitor<>() {
       private int checkCanceledCount;
 
@@ -674,9 +740,19 @@ final class RefreshWorker {
           return FileVisitResult.SKIP_SUBTREE;  // bypassing NTFS reparse points
         }
         // on average, this "excluded" array is small for any particular root, so linear search it is.
-        if (excluded.contains(dir)) {
-          // skipping excluded roots (record its attributes nevertheless), even if we have content roots beneath
-          // stop optimization right here - it's too much pain to track all these nested content/excluded/content otherwise
+        if (excluded.contains(dir) && !isInContent(dir)) {
+          List<Path> contentUnderExcluded = contentRootsUnderExcluded(dir);
+          if (contentUnderExcluded.isEmpty()) {
+            return FileVisitResult.SKIP_SUBTREE;
+          }
+          // `dir` is excluded but has registered content roots beneath. Replace the ChildInfo for `dir`
+          // (recorded by `visitFile(dir, attrs)` above when `dir != root`, or the pre-seeded fakeRoot otherwise)
+          // with one whose children contain shared intermediate dirs down to the scanned content roots.
+          // We do not push to the stack because `postVisitDirectory` will not fire after `SKIP_SUBTREE`.
+          List<ChildInfo> parentChildren = stack.peek();
+          ChildInfo dirInfo = ContainerUtil.getLastItem(parentChildren);
+          PathTreeNode rootPathNode = new PathTreeNode(dir, contentUnderExcluded);
+          parentChildren.set(parentChildren.size() - 1, withChildrenUnderExcluded(rootPathNode, dirInfo, excluded, currentDir));
           return FileVisitResult.SKIP_SUBTREE;
         }
         stack.push(new ArrayList<>());
@@ -688,11 +764,7 @@ final class RefreshWorker {
         if ((++checkCanceledCount & 0xf) == 0) {
           checkCancelled(currentDir);
         }
-        FileAttributes attributes = FileAttributes.fromNio(file, attrs);
-        String symLinkTarget = attrs.isSymbolicLink() ? FileUtilRt.toSystemIndependentName(file.toRealPath().toString()) : null;
-        int nameId = vfsPeer.getNameId(file.getFileName().toString());
-        ChildInfo info = new ChildInfoImpl(nameId, attributes, null, symLinkTarget, false);
-        stack.peek().add(info);
+        stack.peek().add(createChildInfo(file, attrs));
         return FileVisitResult.CONTINUE;
       }
 
@@ -722,7 +794,75 @@ final class RefreshWorker {
       return null;  // tell the client we didn't find any children, abandon the optimization altogether
     }
 
-    return stack.pop().get(0).getChildren();
+    ChildInfo rootInfo = stack.pop().getFirst();
+    ChildInfo[] children = rootInfo.getChildren();
+    return children == null ? null : new ScannedChildren(children, rootInfo.isAllChildren());
+  }
+
+  private ChildInfo readChildInfo(Path file) throws IOException {
+    BasicFileAttributes attrs = Files.readAttributes(file, BasicFileAttributes.class, LinkOption.NOFOLLOW_LINKS);
+    return createChildInfo(file, attrs);
+  }
+
+  private ChildInfo createChildInfo(Path file, BasicFileAttributes attrs) throws IOException {
+    FileAttributes attributes = FileAttributes.fromNio(file, attrs);
+    String symLinkTarget = attrs.isSymbolicLink() ? FileUtilRt.toSystemIndependentName(file.toRealPath().toString()) : null;
+    int nameId = vfsPeer.getNameId(file.getFileName().toString());
+    return new ChildInfoImpl(nameId, attributes, null, symLinkTarget, false);
+  }
+
+  private ChildInfo withChildrenUnderExcluded(PathTreeNode node, ChildInfo info, List<Path> nestedExcluded, NewVirtualFile currentDir) {
+    if (node.isContentRoot) {
+      ScannedChildren children = scanChildren(node.path, nestedExcluded, currentDir);
+      return children == null ? info : ((ChildInfoImpl)info).withChildren(children.children(), children.childrenComplete());
+    }
+
+    List<ChildInfo> children = new ArrayList<>(node.children.size());
+    for (PathTreeNode childNode : node.children.values()) {
+      try {
+        ChildInfo childInfo = readChildInfo(childNode.path);
+        ChildInfo childInfoWithChildren = withChildrenUnderExcluded(childNode, childInfo, nestedExcluded, currentDir);
+        children.add(childInfoWithChildren);
+      }
+      catch (IOException e) {
+        LOG.warn(e);
+      }
+    }
+    return ((ChildInfoImpl)info).withChildren(children.toArray(ChildInfo.EMPTY_ARRAY), false);
+  }
+
+  private static final class PathTreeNode {
+    private final Path path;
+    private final Map<Path, PathTreeNode> children = new LinkedHashMap<>();
+    private boolean isContentRoot;
+
+    private PathTreeNode(Path path) {
+      this.path = path;
+    }
+
+    private PathTreeNode(Path dir, List<Path> contentRootsUnder) {
+      this(dir);
+      for (var root : contentRootsUnder) {
+        addContentRoot(dir.relativize(root));
+      }
+    }
+
+    private void addContentRoot(Path relativePath) {
+      if (relativePath.toString().isEmpty()) {
+        isContentRoot = true;
+        children.clear();
+        return;
+      }
+
+      PathTreeNode node = this;
+      for (Path path : relativePath) {
+        Path childPath = node.path.resolve(path);
+        node = node.children.computeIfAbsent(childPath, child -> new PathTreeNode(child));
+        if (node.isContentRoot) return;
+      }
+      node.isContentRoot = true;
+      node.children.clear();
+    }
   }
 
   private void checkAndScheduleChildRefresh(List<VFileEvent> events,
